<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_sort"
        android:title="@string/action_sort_menu"
        android:orderInCategory="1"
        app:showAsAction="ifRoom">
        <menu android:id="@+id/menu_sort_category">
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_sort_by_popular"
                    android:title="@string/action_sort_menu_by_popular"
                    android:checked="true"
                    />
                <item
                    android:id="@+id/action_sort_by_rate"
                    android:title="@string/action_sort_menu_by_rate"
                    />
            </group>
        </menu>
    </item>

</menu>